# phones

./: .gitignore  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml  settings.py.example
.tasks/: T01.1.md  T01.md  T02.1.md  T02.2.md  T02.3.md  T02.md
app/: __init__.py  app.py  catalog.py  config.py
app/layers/: __init__.py  base.py  layer0_dummy_data.py  layer1_search.py  layer3_schema.py  layer4_context.py  schema.py
app/search/: embeddings.py  index.py
app/templates/: index.html
data/: models.yaml  schema.sql
data/phones/: apple-iphone-11-pro-max.json  apple-iphone-11-pro.json  apple-iphone-11.json  apple-iphone-12-mini.json  apple-iphone-12-pro-max.json  apple-iphone-12-pro.json  apple-iphone-12.json  apple-iphone-13-mini.json  apple-iphone-13-pro-max.json  apple-iphone-13-pro.json  apple-iphone-13.json  apple-iphone-14-plus.json  apple-iphone-14-pro-max.json  apple-iphone-14-pro.json  apple-iphone-14.json  apple-iphone-15-plus.json  (+136 more)
docs/: mockups.md  specs.md  teaching.md
layer1/: app.py
layer1_solution/: app.py
layer2/: app.py  prompt.md
layer2_solution/: app.py
layer3/: app.py
layer3_solution/: app.py  prompt.md
layer4/: app.py  prompt_summary.md
layer4_solution/: app.py
layer5/: app.py  prompt_chat.md  prompt_summary.md
layer5_solution/: app.py
layer6/: app.py  prompt.md  prompt_chat.md
phonekit/: __init__.py  app.py  catalog.py  config.py  design_flags.py  llm.py  memory.py  schema.py  session.py  trace.py
scripts/: generate_phones.py  import_phones.py
tests/: test_conversation.py  test_session.py
(+21 files in other folders)
