[project]
name = "phones"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.109.1",
    "flask>=3.1.3",
    "openai>=1",
    "pydantic>=2",
]

[dependency-groups]
dev = [
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The project is named "phones" but the importable package is "phonekit", so
# the build backend needs the explicit mapping. uv installs it editable, which
# is what lets the layer dirs import phonekit from anywhere.
[tool.hatch.build.targets.wheel]
packages = ["phonekit"]
